// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Legend /> Default story renders snapshot 1`] = `
<div
  class="css-1t849lf"
>
  <div
    aria-label="H. sapiens: 3212"
    aria-pressed="false"
    class="css-3vx361"
    role="button"
    tabindex="0"
  >
    <div
      class="css-x22ruv"
      color="#615da2"
    />
    <span
      class="css-1sjvubj"
    >
      H. sapiens
    </span>
  </div>
  <div
    aria-label="M. musculus: 130"
    aria-pressed="false"
    class="css-3vx361"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1gzfgth"
      color="#9e5798"
    />
    <span
      class="css-1sjvubj"
    >
      M. musculus
    </span>
  </div>
  <div
    aria-label="C. Jacques: 89"
    aria-pressed="false"
    class="css-3vx361"
    role="button"
    tabindex="0"
  >
    <div
      class="css-y5084e"
      color="#b76278"
    />
    <span
      class="css-1sjvubj"
    >
      C. Jacques
    </span>
  </div>
  <div
    aria-label="D. rerio: 65"
    aria-pressed="false"
    class="css-3vx361"
    role="button"
    tabindex="0"
  >
    <div
      class="css-swyc6i"
      color="#b27c5a"
    />
    <span
      class="css-1sjvubj"
    >
      D. rerio
    </span>
  </div>
  <div
    aria-label="M. mulatta: 45"
    aria-pressed="false"
    class="css-3vx361"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1m0cwsu"
      color="#9e9554"
    />
    <span
      class="css-1sjvubj"
    >
      M. mulatta
    </span>
  </div>
  <div
    aria-label="P. mirabillis: 34"
    aria-pressed="false"
    class="css-3vx361"
    role="button"
    tabindex="0"
  >
    <div
      class="css-dj7j88"
      color="#89ab60"
    />
    <span
      class="css-1sjvubj"
    >
      P. mirabillis
    </span>
  </div>
  <div
    aria-label="V. cholerae: 12"
    aria-pressed="false"
    class="css-3vx361"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1fn5tfx"
      color="#78bc7f"
    />
    <span
      class="css-1sjvubj"
    >
      V. cholerae
    </span>
  </div>
  <div
    aria-label="Other (17): 40"
    aria-pressed="false"
    class="css-3vx361"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1cg4952"
      color="#8ac2d2"
    />
    <span
      class="css-1sjvubj"
    >
      Other (17)
    </span>
  </div>
</div>
`;

exports[`<Legend /> WithSelection story renders snapshot 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="css-1t849lf"
  >
    <div
      aria-label="H. sapiens: 3212"
      aria-pressed="false"
      class="css-3vx361"
      role="button"
      tabindex="0"
    >
      <div
        class="css-x22ruv"
        color="#615da2"
      />
      <span
        class="css-1sjvubj"
      >
        H. sapiens
      </span>
      <span
        class="css-ncdzc3"
      >
        3,212
      </span>
    </div>
    <div
      aria-label="M. musculus: 130"
      aria-pressed="false"
      class="css-3vx361"
      role="button"
      tabindex="0"
    >
      <div
        class="css-1gzfgth"
        color="#9e5798"
      />
      <span
        class="css-1sjvubj"
      >
        M. musculus
      </span>
      <span
        class="css-ncdzc3"
      >
        130
      </span>
    </div>
    <div
      aria-label="C. Jacques: 89"
      aria-pressed="false"
      class="css-3vx361"
      role="button"
      tabindex="0"
    >
      <div
        class="css-y5084e"
        color="#b76278"
      />
      <span
        class="css-1sjvubj"
      >
        C. Jacques
      </span>
      <span
        class="css-ncdzc3"
      >
        89
      </span>
    </div>
    <div
      aria-label="D. rerio: 65"
      aria-pressed="false"
      class="css-3vx361"
      role="button"
      tabindex="0"
    >
      <div
        class="css-swyc6i"
        color="#b27c5a"
      />
      <span
        class="css-1sjvubj"
      >
        D. rerio
      </span>
      <span
        class="css-ncdzc3"
      >
        65
      </span>
    </div>
    <div
      aria-label="M. mulatta: 45"
      aria-pressed="false"
      class="css-3vx361"
      role="button"
      tabindex="0"
    >
      <div
        class="css-1m0cwsu"
        color="#9e9554"
      />
      <span
        class="css-1sjvubj"
      >
        M. mulatta
      </span>
      <span
        class="css-ncdzc3"
      >
        45
      </span>
    </div>
    <div
      aria-label="P. mirabillis: 34"
      aria-pressed="false"
      class="css-3vx361"
      role="button"
      tabindex="0"
    >
      <div
        class="css-dj7j88"
        color="#89ab60"
      />
      <span
        class="css-1sjvubj"
      >
        P. mirabillis
      </span>
      <span
        class="css-ncdzc3"
      >
        34
      </span>
    </div>
    <div
      aria-label="V. cholerae: 12"
      aria-pressed="false"
      class="css-3vx361"
      role="button"
      tabindex="0"
    >
      <div
        class="css-1fn5tfx"
        color="#78bc7f"
      />
      <span
        class="css-1sjvubj"
      >
        V. cholerae
      </span>
      <span
        class="css-ncdzc3"
      >
        12
      </span>
    </div>
    <div
      aria-label="Other (17): 40"
      aria-pressed="false"
      class="css-3vx361"
      role="button"
      tabindex="0"
    >
      <div
        class="css-1cg4952"
        color="#8ac2d2"
      />
      <span
        class="css-1sjvubj"
      >
        Other (17)
      </span>
      <span
        class="css-ncdzc3"
      >
        40
      </span>
    </div>
  </div>
  <div
    style="margin-top: 40px;"
  >
    <div
      style="display: flex; gap: 8px; margin-bottom: 12px;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary css-1djz83l-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1am7bo"
        >
          Select All
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary css-bf43t5-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="css-1am7bo"
        >
          Clear Selection
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      style="display: flex; flex-wrap: wrap; gap: 4px;"
    />
  </div>
</div>
`;

exports[`<Legend /> WithValues story renders snapshot 1`] = `
<div
  class="css-1t849lf"
>
  <div
    aria-label="H. sapiens: 3212"
    aria-pressed="false"
    class="css-3vx361"
    role="button"
    tabindex="0"
  >
    <div
      class="css-x22ruv"
      color="#615da2"
    />
    <span
      class="css-1sjvubj"
    >
      H. sapiens
    </span>
    <span
      class="css-ncdzc3"
    >
      3,212
    </span>
  </div>
  <div
    aria-label="M. musculus: 130"
    aria-pressed="false"
    class="css-3vx361"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1gzfgth"
      color="#9e5798"
    />
    <span
      class="css-1sjvubj"
    >
      M. musculus
    </span>
    <span
      class="css-ncdzc3"
    >
      130
    </span>
  </div>
  <div
    aria-label="C. Jacques: 89"
    aria-pressed="false"
    class="css-3vx361"
    role="button"
    tabindex="0"
  >
    <div
      class="css-y5084e"
      color="#b76278"
    />
    <span
      class="css-1sjvubj"
    >
      C. Jacques
    </span>
    <span
      class="css-ncdzc3"
    >
      89
    </span>
  </div>
  <div
    aria-label="D. rerio: 65"
    aria-pressed="false"
    class="css-3vx361"
    role="button"
    tabindex="0"
  >
    <div
      class="css-swyc6i"
      color="#b27c5a"
    />
    <span
      class="css-1sjvubj"
    >
      D. rerio
    </span>
    <span
      class="css-ncdzc3"
    >
      65
    </span>
  </div>
  <div
    aria-label="M. mulatta: 45"
    aria-pressed="false"
    class="css-3vx361"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1m0cwsu"
      color="#9e9554"
    />
    <span
      class="css-1sjvubj"
    >
      M. mulatta
    </span>
    <span
      class="css-ncdzc3"
    >
      45
    </span>
  </div>
  <div
    aria-label="P. mirabillis: 34"
    aria-pressed="false"
    class="css-3vx361"
    role="button"
    tabindex="0"
  >
    <div
      class="css-dj7j88"
      color="#89ab60"
    />
    <span
      class="css-1sjvubj"
    >
      P. mirabillis
    </span>
    <span
      class="css-ncdzc3"
    >
      34
    </span>
  </div>
  <div
    aria-label="V. cholerae: 12"
    aria-pressed="false"
    class="css-3vx361"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1fn5tfx"
      color="#78bc7f"
    />
    <span
      class="css-1sjvubj"
    >
      V. cholerae
    </span>
    <span
      class="css-ncdzc3"
    >
      12
    </span>
  </div>
  <div
    aria-label="Other (17): 40"
    aria-pressed="false"
    class="css-3vx361"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1cg4952"
      color="#8ac2d2"
    />
    <span
      class="css-1sjvubj"
    >
      Other (17)
    </span>
    <span
      class="css-ncdzc3"
    >
      40
    </span>
  </div>
</div>
`;
